Gradient, kort om differetierbarhet

--- a/InforTentaP.tex
+++ b/InforTentaP.tex
@@ -67,8 +67,17 @@ Minns även att
 
 
 \subsection{Gradient}
+Gradient beskriver vi oftast som en vektor som i en viss punkt pekar åt det håll som en funktionsyta $f(x,y)$ lutar mest (uppåt). Se pilarna i botten av bild nedan.
+\begin{center}
+\includegraphics[scale=0.5]{gradient}
+\end{center}
+att räkna ut gradienten är ganska 'straight forward'. Den ges (med denna kurs notering) av
+\begin{equation}
+\nabla f = (f'_x,f'_y)
+\end{equation}
 
 \subsection{Differentierbarhet}
+En funktion $f(x_1,x_2,...,x_n)$ är differenterbar i en punkt $(a_1,a_2,...,a_n)$ om man oavsett vilket håll man närmar sig ifrån får en väldefinierad derivata i punkten.
 
 \subsection{Gränsvärden}
 
