Gränsvärden och lite tillsnyggning

--- a/InforTentaP.tex
+++ b/InforTentaP.tex
@@ -64,6 +64,11 @@ Minns även att
 \begin{equation}
 \frac{d(x,y)}{d(u,v)} = \frac{1}{\frac{d(u,v)}{d(x,y)}}
 \end{equation}
+Viktiga funktionaldeterminanter är t.ex. $\frac{d(x,y)}{d(\rho,\phi)} = \rho$ (cylindriska koordinater, du vet vad $x(\rho,\phi)$ och $y(\rho,\phi)$ är) och $\frac{d(x,y,z)}{d(\rho,\theta,\phi)} = \rho^2 sin(\theta)$ (Sfäriska koordinater där $\left\{ \begin{array}{lll}
+x=\rho sin(\theta)cos(\phi)\\
+y=\rho sin(\theta)sin(\phi)\\
+z=\rho cos(\theta)
+\end{array} \right. $). Dessa två får användas utan härledning på tentan
 
 
 \subsection{Gradient}
@@ -80,5 +85,6 @@ att räkna ut gradienten är ganska 'straight forward'. Den ges (med denna kurs 
 En funktion $f(x_1,x_2,...,x_n)$ är differenterbar i en punkt $(a_1,a_2,...,a_n)$ om man oavsett vilket håll man närmar sig ifrån får en väldefinierad derivata i punkten.
 
 \subsection{Gränsvärden}
+När man skall bestämma ett flervariabelgränsvärde får man problemet att funktionen beror på flera variabler och således kan man närma sig en punkt från oändligt många håll. Detta löses genom att stänga in funktionen mellan två funktioner som endast beror av en variabel. Ett bra sätt att på ett beroende av endast en variabel är att t.ex. byta till polära eller cylindriska koordinater.
 
 \end{document}
