--- a/InforTentaP.tex
+++ b/InforTentaP.tex
@@ -25,7 +25,7 @@
 
 \clearpage
 \section{Disclaimer}
-Detta dokument ser snyggt och seriöst ut för att det är skrivet i Latex. Lita inte på att allt står med. Jag är inte så seriös som jag framställer mig.
+Även om detta dokument ser ut som något MAI skickar ut så är det inte det. Jag har sett över det mesta men fel kan förekomma. Jag kan inte lova att allt detta räcker för att klara tentorna.
 
 \section{Flervariabelanalys}
 Vi har tagit upp områden såsom \textit{Flervariabelgränsvärden}, \textit{Partialderivator}, \textit{Partiella differetialekvationer}, \textit{Kedjeregeln} , \textit{}, \textit{Gradienter}, \textit{Funktionaldeterminanter} och \textit{Dubbel-/Trippelintegraler} samt \textit{Medelvärdessatsen}
@@ -86,5 +86,10 @@ En funktion $f(x_1,x_2,...,x_n)$ är differenterbar i en punkt $(a_1,a_2,...,a_n
 
 \subsection{Gränsvärden}
 När man skall bestämma ett flervariabelgränsvärde får man problemet att funktionen beror på flera variabler och således kan man närma sig en punkt från oändligt många håll. Detta löses genom att stänga in funktionen mellan två funktioner som endast beror av en variabel. Ett bra sätt att på ett beroende av endast en variabel är att t.ex. byta till polära eller cylindriska koordinater.
+
+\section{Elektromagnetism}
+Fält, fält, fält, fält.
+\subsection{Jag tar livet av mig}
+Kan inte den här kursen. Snälla någon annan skriv.
 
 \end{document}
