--- a/InforTentaP.tex
+++ b/InforTentaP.tex
@@ -92,4 +92,65 @@ Fält, fält, fält, fält.
 \subsection{Jag tar livet av mig}
 Kan inte den här kursen. Snälla någon annan skriv.
 
+\section{Standard (minns från envar)}
+
+\subsection{Standardgräsvärden}
+\begin{equation}
+\lim_{x\to 0} \frac{\ln(1+x)}{x}=1
+\end{equation}
+\begin{equation}
+\lim_{x\to 0} \frac{e^x-1}{x}=1
+\end{equation}
+\begin{equation}
+\lim_{x\to 0} \frac{\sin(x)}{x}=1
+\end{equation}
+\begin{equation}
+\lim_{x\to 0+} x^\alpha \ln(x)=0
+\end{equation}
+\begin{equation}
+\lim_{x\to \infty} \frac{\ln(x)}{x^\alpha}=0
+\end{equation}
+\begin{equation}
+\lim_{x\to \infty} \frac{x^\alpha}{a^x}=0
+\end{equation}
+För ovanstående samband gäller att $\alpha \in \mathbb{R}$ , $\alpha >0$ och $a \in \mathbb{R}$ , $a > 1$
+
+\subsection{Stardardprimitiver}
+Glöm inte lägga till konstant $C$.
+\begin{equation}
+\int \alpha \,dx = \alpha x \hspace{10mm}(\alpha\in\mathbb{R})
+\end{equation}
+\begin{equation}
+\int x^\alpha \,dx = \frac{a^{\alpha+1}}{\alpha+1} \hspace{10mm}(\alpha\in\mathbb{R},\alpha\neq-1)
+\end{equation}
+\begin{equation}
+\int \frac{1}{x} \,dx = \ln|x|
+\end{equation}
+\begin{equation}
+\int e^x \,dx = e^x
+\end{equation}
+\begin{equation}
+\int \cos(x) \,dx = \sin(x)
+\end{equation}
+\begin{equation}
+\int sin(x) \,dx = -\cos(x)
+\end{equation}
+\begin{equation}
+\int \frac{1}{1+x^2} \,dx = \arctan(x)
+\end{equation}
+\begin{equation}
+\int \frac{1}{\sqrt{1-x^2}} \,dx = \arcsin(x)
+\end{equation}
+\begin{equation}
+\int \frac{1}{\cos^2(x)} \,dx = tan(x)
+\end{equation}
+\begin{equation}
+\int \frac{1}{\sin^2(x)} \,dx = -\cot(x)
+\end{equation}
+\begin{equation}
+\int \frac{1}{\sqrt{x^2+\alpha}} \,dx = \ln|x+\sqrt{x^2+\alpha}| \hspace{10mm} (\alpha
+\in \mathbb{R},\alpha\neq0)
+\end{equation}
+
+
 \end{document}
