--- a/InforTentaP.tex
+++ b/InforTentaP.tex
@@ -93,6 +93,7 @@ Fält, fält, fält, fält.
 Kan inte den här kursen. Snälla någon annan skriv.
 
 \section{Standard (minns från envar)}
+Standardgränsvärden men framförallt standardprimitiver är användbart i båda kurserna.
 
 \subsection{Standardgräsvärden}
 \begin{equation}
